# ai-novel-system

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  AI_RESPONSE_TIME_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DATABASE_FIX_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT_v1.1.0.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  FIX_COMPLETE.md  ISSUES_11_12_14_13_10_9_FIX_REPORT.md  ISSUES_6_7_FIX_REPORT.md  ISSUE_FIX_REPORT.md  LOCAL_DEV_GUIDE.md  LOCAL_DEV_SETUP_COMPLETE.md  MODEL_ENUM_FIX_REPORT.md  QUICK_START.md  README.en.md  README.md  RELEASE_PLAN.md  RELEASE_PLAN_v1.1.0.md  ai_agent_collaboration_improvements.md  check_alembic_version.py  check_db.py  check_db_tables.py  check_novel.py  check_novel_worldview.py  check_novels.py  content_continuity_improvements.md  create_tables.sh  create_test_novel.py  deploy_complete.sh  deploy_docker.sh  docker-compose-cn.yml  (+43 more)
.github/workflows/: ci-cd.yml  code-quality.yml  github-automation.yml  playwright.yml
.qoder/rules/: backend-code-style.md  bianma-guifan.md  deployment.md  frontend-code-style.md  git-workflow.md  project-intro.md  tech-stack.md  testing.md
.qoder/specs/: novel-content-evaluation-report.md  spec-20260325132925.md
.sisyphus/: ralph-loop.local.md
.trae/documents/: agent_auto_run_plan.md  automated_novel_system_plan.md  continuous_optimization_strategy.md  crawler_improvement_plan.md  data_analysis_framework.md  data_collection_strategy.md  data_visualization_plan.md  database_fix_plan.md  database_management_best_practices.md  netizen_novel_preference_analysis_plan.md  novel_analysis_plan.md  result_interpretation_guide.md  (+1 more)
agents/: AGENTS.md  __init__.py  agent_communicator.py  agent_dispatcher.py  agent_manager.py  agent_query_service.py  agent_scheduler.py  chapter_outline_mapper.py  chapter_rhythm_planner.py  chapter_summary_generator.py  character_consistency_tracker.py  character_relationship_tracker.py  character_review_loop.py  character_state_extractor.py  coherence_scorecard.py  consequence_tracker.py  context_compressor.py  context_propagator.py  continuity_fixer.py  continuity_inference.py  continuity_integration.py  continuity_integration_module.py  continuity_models.py  continuity_validation.py  crew_manager.py  crew_manager.py.bak  crew_manager_enhanced_example.py  emotion_diversity_checker.py  enhanced_context_manager.py  foreshadowing_auto_detector.py  foreshadowing_auto_injector.py  foreshadowing_tracker.py  global_consistency_checker.py  graph_query_mixin.py  iteration_controller.py  lexical_diversity_checker.py  outline_dynamic_updater.py  outline_iteration_controller.py  outline_quality_evaluator.py  outline_refiner.py  (+18 more)
ai_test_reports/: generate_20260323_135403.json  generate_20260323_135607.json  heal_20260323_135302.json  hybrid_20260323_135315.json  test_20260323_135337.json  test_20260323_140358.json  test_20260323_152044.json  test_20260323_192959.json  test_20260323_194703.json  test_20260323_194837.json  test_20260325_124047.json  test_20260325_124503.json  test_20260325_124730.json  test_20260325_124824.json  test_20260325_124854.json
alembic/: AGENTS.md  env.py
backend/: AGENTS.md  Dockerfile  __init__.py  config.py  dependencies.py  main.py
core/: AGENTS.md  __init__.py  database.py  exceptions.py  logging_config.py
docs/:  《剑神归来》前6章写作质量分析报告.md   小说系统质量改进方案.md  ANALYSIS_AND_RECOMMENDATIONS.md  CODE_QUALITY_AUTOMATION.md  DOCSTRING_STYLE_GUIDE.md  GIT_FLOW_MIGRATION_REPORT.md  ISSUES_CREATED_REPORT.md  ISSUE_40_FIX.md  ISSUE_41_FIX.md  LOW_PRIORITY_ISSUES_FIX_REPORT.md  MERGE_REPORT.md  MODULE_DESIGN_ANALYSIS_2025.md  P1_FINAL_REPORT.md  P1_FIX_PLAN.md  P1_PROGRESS_REPORT.md  P2_BATCH_FIX_REPORT.md  P2_FIX_PLAN.md  PRD.md  PRD_business.md  REFACTOR_PLAN_34.md  coherence_fix_plan.md
frontend/: .env.test  AGENTS.md  Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
llm/: AGENTS.md  __init__.py  cost_tracker.py  prompt_manager.py  qwen_client.py  token_calculator.py
migrations/: add_chapter_config_and_main_plot_detailed.py  add_memory_query_indexes.py  create_agent_activities_table.py
nginx/: nginx.conf
novel_memory/: novel_memory.db-shm  novel_memory.db-wal
opencli-adapter/: README.md  install.sh  manifest.json  test-adapter.sh
scripts/: AGENTS.md  __init__.py  ai_e2e_runner.py  auto-review-fix.sh  auto_novel_process.py  build_with_version.sh  cleanup_duplicate_characters.py  create-github-issues.sh  create-issues-from-review.sh  demo_outline_enhancement.py  generate-pr-description.sh  generate_novel_tests.py  github-auto.sh  github-daily-report.sh  init_local_dev.sh  issue-manager.sh  lib_common.sh  quality-score.sh  run_auto_novel.sh  start_agents.py  start_agents.sh  start_backend.sh  start_dev_all.sh  start_frontend.sh  stop_agents.sh  verify-fixes.py
tests/: AGENTS.md  __init__.py  benchmark_indexes.py  conftest.py  continuity_system_test.py  test_ai_chat_chapter_content.py  test_ai_chat_gallery.py  test_ai_chat_gallery_unit.py  test_concurrency.py  test_example.py  test_read_jueshi_jianshen.py
workers/: AGENTS.md  __init__.py  celery_app.py  generation_worker.py
(+458 files in other folders)
