[tool.poetry]
name = "novel-system"
version = "2.3.0"
description = "AI-powered novel generation system using CrewAI and Qwen"
authors = ["Novel System"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
redis = "^5.0.0"
celery = { extras = ["redis"], version = "^5.4.0" }
crewai = "^0.100.0"
dashscope = "^1.20.0"
websockets = "^14.0"
python-dotenv = "^1.0.0"
httpx = ">=0.23.0,<0.28.0"
openai = "^2.21.0"
beautifulsoup4 = "^4.14.3"
lxml = "^5.0.0"
aiofiles = "^25.1.0"
tenacity = "^9.1.4"
cryptography = "^46.0.5"
playwright = "^1.58.0"
selenium = "^4.27.0"
requests = "^2.32.0"
typing-extensions = ">=4.0"
mako = ">=1.0"
pydantic-core = ">=2.0"
psycopg2-binary = ">=2.9"
h11 = ">=0.14"
fake-useragent = "^2.2.0"
pandas = "^2.0.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
joblib = "^1.4.0"
psutil = "^7.2.2"
# Neo4j 图数据库驱动
neo4j = "^5.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
faker = "^40.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pydocstyle]
convention = "pep257"
add-ignore = ["D204", "D211", "D212", "D213", "D403"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests with mocked data",
    "network: requires network access",
    "real_crawl: real crawl scenario tests",
    "integration: integration tests requiring database",
    "slow: slow tests",
    "smoke: smoke tests for quick verification",
    "regression: regression tests",
    "ui: UI interaction tests",
    "edge_case: edge case tests",
    "creation: novel creation flow tests",
    "graph: tests requiring Neo4j graph database",
]

[tool.coverage.run]
source = ["backend", "core", "agents"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/node_modules/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
